shoe-cart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    name: myingress
spec:
  rules:
  - host: shoe.healerkay.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: shoe-cart-service
            port:
              number: 80
  - host: phpmyadmin.healerkay.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
  - host: prometheus.healerkay.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-service
            port:
              number: 9090
  - host: grafana.healerkay.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
  - host: alertmanager.healerkay.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: alertmanager-service
            port:
              number: 9093
  - host: blackbox.healerkay.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: blackbox-service
            port:
              number: 9115
  - host: nodeexporter.healerkay.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodeexporter-service
            port:
              number: 9100
  
  tls:
    - hosts:
        - shoe.healerkay.online
        - phpmyadmin.healerkay.online
        - prometheus.healerkay.online
        - grafana.healerkay.online
        - nodeexporter.healerkay.online
        - blackbox.healerkay.online
        - alertmanager.healerkay.online
      secretName: tls-2048-shoe



# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: myingress
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     cert-manager.io/cluster-issuer: letsencrypt-production
#   labels:
#     name: myingress
# spec:
#   rules:
#   - host: shoe.healerkay.online
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: shoe-cart-service
#             port:
#               number: 80
#   - host: phpmyadmin.healerkay.online
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: phpmyadmin-service
#             port:
#               number: 80                               

#   tls:
#       - hosts:
#           - phpmyadmin.healerkay.online
#           - shoe.healerkay.online
#         secretName: tls-2048-shoe
